third_party/move/move-compiler-v2/tests/checking/typing/other_builtins_invalid.exp

Diagnostics:
error: invalid call of `freeze`: mutability mismatch (&mut != &) for argument 1
  ┌─ tests/checking/typing/other_builtins_invalid.move:4:22
  │
4 │         (freeze<u64>(x): &mut u64);
  │                      ^

error: invalid call of `freeze`: mutability mismatch (&mut != &) for argument 1
  ┌─ tests/checking/typing/other_builtins_invalid.move:5:31
  │
5 │         (freeze<vector<bool>>(&any()): &mut vector<bool>);
  │                               ^^^^^^

error: expected `u64` but found `bool`
  ┌─ tests/checking/typing/other_builtins_invalid.move:7:22
  │
7 │         (assert!(42, true): ());
  │                      ^^^^

error: expected `bool` but found `integer`
  ┌─ tests/checking/typing/other_builtins_invalid.move:7:18
  │
7 │         (assert!(42, true): ());
  │                  ^^

error: expected `bool` but found `()`
  ┌─ tests/checking/typing/other_builtins_invalid.move:8:10
  │
8 │         (assert!(true && false, *x): bool);
  │          ^^^^^^

error: expected `u64` but found `u8`
  ┌─ tests/checking/typing/other_builtins_invalid.move:9:32
  │
9 │         assert!(true || false, 0u8);
  │                                ^^^
